--- a/css/tesla.css
+++ b/css/tesla.css
@@ -25,6 +25,7 @@ body {
 	background: #eee;
 }
 
+/* === Front page === */
 .banner-area {
 	width: 100%;
 	height: 100vh;
@@ -66,4 +67,70 @@ body {
 	font-size: 18px;
 	cursor: pointer;
 	background: #F44336;
+}
+
+/* === Navbar test === */
+
+.sidebar .text {
+	font-size: 13px;
+	font-weight: 500;
+	color: var(--text-color);
+}
+
+.sidebar .image {
+	min-width: 60px;
+	display: flex;
+	align-items: center;
+}
+
+.sidebar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 250px;
+	padding: 10px 14px;
+	background: var(--sidebar-color);
+}
+
+.sidebar header {
+	position: relative;
+}
+
+.sidebar .image-text img {
+	width: 40px;
+	border-radius: 6px;
+}
+
+.sidebar header .image-text {
+	display: flex;
+	align-items: center;
+}
+
+header .image-text .header-text {
+	display: flex;
+	flex-direction: column;
+}
+
+.header-text .name {
+	font-weight: 600;
+}
+
+.header-text .profession {
+	margin-top: -2px;
+}
+
+.sidebar header .toggle {
+	position: absolute;
+	top: 50%;
+	left: -25px;
+	transform: translateY(-50%);
+	height: 25px;
+	width: 25px;
+	background: var(--primary-color);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	font-size: 22px;
 }
