--- a/css/tesla.css
+++ b/css/tesla.css
@@ -14,15 +14,26 @@
 
 	/* === Transition === */
 
-	--tran-02: all 0.2 ease;
-	--tran-03: all 0.3 ease;
-	--tran-04: all 0.4 ease;
-	--tran-05: all 0.5 ease;
+	--tran-02: all 0.2s ease;
+	--tran-03: all 0.3s ease;
+	--tran-04: all 0.4s ease;
+	--tran-05: all 0.5s ease;
 }
 
 body {
 	font-family: sans-serif;
-	background: #eee;
+	height: 100vh;
+	background: var(--body-color);
+	transition: var(--tran-04);
+}
+
+body.dark {
+	--body-color : #18191A;
+	--sidebar-color: #242526;
+	--primary-color: #3A3B3C;
+	--primary-color-light: #3A3B3C;
+	--toggle-color: #FFF;
+	--text-color: #CCC;
 }
 
 /* === Front page === */
@@ -75,6 +86,9 @@ body {
 	font-size: 13px;
 	font-weight: 500;
 	color: var(--text-color);
+	transition: var(--tran-03);
+	white-space: nowrap;
+	opacity: 1;
 }
 
 .sidebar .image {
@@ -91,6 +105,37 @@ body {
 	width: 250px;
 	padding: 10px 14px;
 	background: var(--sidebar-color);
+	transition: var(--tran-05);
+}
+
+.sidebar.close {
+	width: 88px;
+}
+
+.sidebar.close .text {
+	opacity: 0;
+}
+
+.sidebar li {
+	height: 50px;
+	margin-top: 10px;
+	list-style: none;
+	display: flex;
+	align-items: center;
+}
+
+.sidebar li .icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-width: 60px;
+	font-size: 20px;
+}
+
+.sidebar li .icon,
+.sidebar li .text {
+	color: var(--text-color);
+	transition: var(--tran-02);
 }
 
 .sidebar header {
@@ -123,8 +168,8 @@ header .image-text .header-text {
 .sidebar header .toggle {
 	position: absolute;
 	top: 50%;
-	left: -25px;
-	transform: translateY(-50%);
+	right: -25px;
+	transform: translateY(-50%) rotate(180deg);
 	height: 25px;
 	width: 25px;
 	background: var(--primary-color);
@@ -133,4 +178,127 @@ header .image-text .header-text {
 	justify-content: center;
 	border-radius: 50%;
 	font-size: 22px;
+	transition: var(--tran-03);
+}
+
+.sidebar.close header .toggle {
+	transform: translateY(-50%);
+}
+
+body.dark .sidebar header .toggle {
+	transform: rotate(180deg);
+	color: var(--text-color);
+}
+
+.sidebar .search-box {
+	background: var(--primary-color-light);
+	border-radius: 6px;
+}
+
+.search-box input {
+	height: 100%;
+	width: 100%;
+	outline: none;
+	border: none;
+	border-radius: 6px;
+	background: var(--primary-color-light);
+}
+
+.sidebar li a {
+	height: 100%;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	border-radius: 6px;
+	transition: var(--tran-04);
+}
+
+.sidebar li a:hover{
+	background: var(--primary-color);
+}
+
+.sidebar li a:hover .icon,
+.sidebar li a:hover .text {
+	color: var(--sidebar-color);
+}
+
+body.dark .sidebar li a:hover .icon,
+body.dark .sidebar li a:hover .text {
+	color: var(--text-color);
+}
+
+.sidebar .menu-bar {
+	height: calc(100% - 50px);
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.menu-bar .mode {
+	position: relative;
+	border-radius: 6px;
+	background: var(--primary-color-light);
+}
+
+.menu-bar .mode .moon-sun {
+	height: 50px;
+	width: 60px;
+	display: flex;
+	align-items: center;
+}
+
+.menu-bar .mode i{
+	position: absolute;
+	transition: var(--tran-03);
+}
+
+.menu-bar .mode i.sun {
+	opacity: 0;
+}
+
+body.dark .menu-bar .mode i.sun {
+	opacity: 1;
+}
+
+body.dark .menu-bar .mode i.moon {
+	opacity: 1;
+}
+
+.menu-bar .mode .toggle-switch {
+	position: absolute;
+	right: 0;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-width: 60px;
+	cursor: pointer;
+	border-radius: 6px;
+	background: var(--primary-color-light);
+}
+
+.toggle-switch .switch {
+	position: relative;
+	height: 22px;
+	width: 44px;
+	border-radius: 25px;
+	background: var(--toggle-color);
+}
+
+.switch:before {
+	content: '';
+	position: absolute;
+	height: 15px;
+	width: 15px;
+	border-radius: 50%;
+	top: 50%;
+	left: 5px;
+	transform: translateY(-50%);
+	background: var(--sidebar-color);
+	transition: var(--tran-03);
+}
+
+body.dark .switch:before {
+	left: 24px;
 }
