--- a/css/tesla.css
+++ b/css/tesla.css
@@ -38,7 +38,7 @@ body.dark {
 
 /* === Front page === */
 .banner-area {
-	width: 100%;
+	width: 200px;
 	height: 100vh;
 	background: url("../img/front_tesla.jpg");
 	background-size: cover;
