--- a/css/tesla.css
+++ b/css/tesla.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
 * {
 	padding: 0;
 	margin: 0;
@@ -37,17 +39,17 @@ body.dark {
 }
 
 /* === Front page === */
+
 .banner-area {
-	height: 100vh;
-	background: url("../img/front_tesla.jpg");
+	background-image: url("../img/front_tesla.jpg");
 	background-size: cover;
+	background-repeat: no-repeat;
+	height: 100vh;
 }
 
 .content-area {
-    height: 100%;
     display: flex;
     justify-content: center;
-    align-content: space-around;
     align-items: center;
 }
 
@@ -56,13 +58,29 @@ body.dark {
 }
 
 .content h1 {
-	font-size: 80px;
-	color: #fff;
+	font-size: 1.8rem;
+	font-family: Tahoma, Geneva, sans-serif;
+	letter-spacing: 2px;
+	word-spacing: 2px;
+	color: #FFC4C4;
+	font-weight: 700;
+	text-decoration: none solid rgb(68, 68, 68);
+	font-style: normal;
+	font-variant: normal;
+	text-transform: uppercase;
 }
 
 .content p {
-	font-size: 30px;
-	color: #ddd;
+	font-size: 1.5rem;
+	font-family: Verdana, Geneva, sans-serif;
+	letter-spacing: 2px;
+	word-spacing: 2px;
+	color: #4E5957;
+	font-weight: 700;
+	text-decoration: none solid rgb(68, 68, 68);
+	font-style: italic;
+	font-variant: normal;
+	text-transform: lowercase;
 }
 
 .content .btn {
@@ -300,4 +318,71 @@ body.dark .menu-bar .mode i.moon {
 
 body.dark .switch:before {
 	left: 24px;
+}
+
+/* === btn-acc Account ===*/
+
+.wrapper{
+	display: flex;
+	justify-content: flex-end;
+}
+
+.wrapper .btn-acc{
+	height: 60px;
+	width: 60px;
+	margin: 0 5px;
+	overflow: hidden;
+	background: #22d1d7;
+	border-radius: 50px;
+	cursor: pointer;
+	box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+	transition: all 0.3s ease-out;
+}
+
+.wrapper .btn-acc:hover {
+	width: 200px;
+}
+
+.wrapper .btn-acc .icon2 {
+	height: 60px;
+	width: 60px;
+	text-align: center;
+	border-radius: 50px;
+	box-sizing: border-box;
+	line-height: 60px;
+	transition: all 0.3s ease-out;
+}
+
+.wrapper .btn-acc:nth-child(1):hover .icon2 {
+	background: #4267B2;
+}
+
+.wrapper .btn-acc .icon2 i {
+	font-size: 25px;
+	line-height: 60px;
+	transition: all 0.3s ease-out;
+}
+
+.wrapper .btn-acc:hover .icon2 i {
+	color: #fff;
+}
+
+.wrapper .btn-acc span {
+	font-size: 20px;
+	font-weight: 500;
+	line-height: 60px;
+	margin-left: 10px;
+	transition: all 0.3s ease-out;
+}
+
+.wrapper .btn-acc:nth-child(1) span {
+	color: #4267B2;
+}
+
+/* === Battery === */
+
+.batt{
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
